# gs-voxelizer

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
gs_voxelizer/: bin_and_sort_gaussians.py  optim_to_render.py  voxelize.py
gs_voxelizer/cuda/: bin_and_sort_gaussians.cu  bin_and_sort_gaussians.cuh  bindings.cu  bindings.h  config.h  ext.cpp  optim_to_render.cu  optim_to_render.cuh  optim_to_render_helpers.cuh  voxelize.cu  voxelize.cuh
test/: compare_speed.py  profile_baseline.py  profile_gs.py  profile_torch.py  test_gs_voxelizer.py  test_multi_channel.py  test_requirements.txt  test_speed.py  test_volume_scaling.py  utils.py
